--- a/index.html
+++ b/index.html
@@ -356,10 +356,6 @@
     </section>
   </main>
 
-  <footer id="contact">
-    &copy; 2025 Unlock &amp; Repair Services with Zuu Caster All rights reserved.
-  </footer>
-
   <!-- Floating WhatsApp Contact Button -->
   <a href="https://wa.me/60178040403" target="_blank" rel="noopener" class="whatsapp-float" aria-label="Contact via WhatsApp +60178040403">
     <svg class="whatsapp-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" fill="white">
@@ -369,4 +365,132 @@
   </a>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RGB Advertising</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: black;
+            margin: 0;
+        }
+
+        .banner {
+            font-size: 48px;
+            font-weight: bold;
+            text-align: center;
+            animation: blink 1s infinite;
+            background: linear-gradient(90deg, red, green, blue);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        @keyframes blink {
+            0%, 100% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.5;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="banner">SAMSUNG FRP / GOOGLE RM60</div>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RGB Advertising</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: black;
+            margin: 0;
+        }
+
+        .banner {
+            font-size: 48px;
+            font-weight: bold;
+            text-align: center;
+            animation: blink 1s infinite;
+            background: linear-gradient(90deg, red, green, blue);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        @keyframes blink {
+            0%, 100% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.5;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="banner">XIAOMI FRP / GOOGLE RM60</div>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RGB Advertising</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: black;
+            margin: 0;
+        }
+
+        .banner {
+            font-size: 48px;
+            font-weight: bold;
+            text-align: center;
+            animation: blink 1s infinite;
+            background: linear-gradient(90deg, red, green, blue);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        @keyframes blink {
+            0%, 100% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.5;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="banner">IPAD 2017 below iCloud remove RM50</div>
+</body>
+</html>
+
+
+ <footer id="contact">
+    &copy; 2025 Unlock &amp; Repair Services with Zuu Caster All rights reserved.
+  </footer>
 
