--- a/index.html
+++ b/index.html
@@ -495,190 +495,228 @@
 </html>
 
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Device Model & Issue Selector</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Report Your Phone Issue</title>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
-    :root {
-      --color-bg: #ffffff;
-      --color-text: #374151; /* dark neutral */
-      --color-text-muted: #6b7280; /* neutral gray */
-      --color-accent: #111827;
-      --color-border: #d1d5db;
-      --radius: 0.75rem;
-      --shadow-light: 0 1px 3px rgb(0 0 0 / 0.1);
-      --font-family: 'Inter', sans-serif;
-    }
+  :root {
+    --color-bg: #ffffff;
+    --color-text-primary: #111827;
+    --color-text-secondary: #6b7280;
+    --color-accent: #111827;
+    --border-radius: 0.75rem;
+    --shadow-light: rgba(0,0,0,0.05);
+    --shadow-md: rgba(0,0,0,0.1);
+    --transition-fast: 0.3s ease;
+  }
 
-    * {
-      box-sizing: border-box;
-    }
+  * {
+    box-sizing: border-box;
+  }
 
-    body {
-      margin: 0;
-      background-color: var(--color-bg);
-      color: var(--color-text);
-      font-family: var(--font-family);
-      line-height: 1.5;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      padding: 4rem 1rem;
-    }
+  body {
+    margin: 0; padding: 0;
+    font-family: 'Poppins', sans-serif;
+    background-color: var(--color-bg);
+    color: var(--color-text-secondary);
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+    padding: 4rem 1rem 6rem;
+  }
 
-    .container {
-      max-width: 600px;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      gap: 2.5rem;
-    }
+  .container {
+    max-width: 480px;
+    width: 100%;
+    background: var(--color-bg);
+    border-radius: var(--border-radius);
+    padding: 2.5rem 2.5rem 3rem;
+    box-shadow: 0 4px 12px var(--shadow-md);
+    color: var(--color-text-primary);
+  }
 
-    h1 {
-      font-weight: 700;
-      font-size: 3rem;
-      margin: 0;
-      color: var(--color-accent);
-      line-height: 1.1;
-    }
+  h1 {
+    font-size: 2.75rem;
+    font-weight: 700;
+    margin: 0 0 1rem;
+    color: var(--color-text-primary);
+    line-height: 1.1;
+  }
 
-    p.subtext {
-      font-weight: 400;
-      font-size: 1.125rem;
-      color: var(--color-text-muted);
-      margin-top: 0.5rem;
-    }
+  p.subtitle {
+    font-size: 1rem;
+    color: var(--color-text-secondary);
+    margin-bottom: 2.5rem;
+    font-weight: 500;
+  }
 
-    form {
-      background: #f9fafb;
-      border-radius: var(--radius);
-      box-shadow: var(--shadow-light);
-      padding: 2rem 2.5rem;
-      display: flex;
-      flex-direction: column;
-      gap: 1.75rem;
-    }
+  form {
+    width: 100%;
+  }
 
-    label {
-      font-weight: 600;
-      font-size: 1rem;
-      color: var(--color-accent);
-      margin-bottom: 0.375rem;
-      display: inline-block;
-    }
+  label {
+    display: block;
+    margin-bottom: 0.375rem;
+    font-weight: 600;
+    font-size: 1rem;
+    color: var(--color-text-primary);
+  }
 
-    select, input[type="text"] {
-      font-family: var(--font-family);
-      font-size: 1rem;
-      padding: 0.625rem 0.75rem;
-      border: 1.5px solid var(--color-border);
-      border-radius: var(--radius);
-      background-color: #ffffff;
-      color: var(--color-text);
-      width: 100%;
-      transition: border-color 0.3s ease, box-shadow 0.3s ease;
-    }
+  select, input[type="text"] {
+    width: 100%;
+    padding: 0.625rem 1rem;
+    font-size: 1rem;
+    border: 1.5px solid #d1d5db;
+    border-radius: var(--border-radius);
+    background-color: #f9fafb;
+    color: var(--color-text-primary);
+    transition: border-color var(--transition-fast), box-shadow var(--transition-fast);
+  }
 
-    select:focus, input[type="text"]:focus {
-      outline: none;
-      border-color: #2563eb;
-      box-shadow: 0 0 0 3px rgb(59 130 246 / 0.3);
-      background-color: #ffffff;
-    }
+  select:focus, input[type="text"]:focus {
+    outline: none;
+    border-color: var(--color-accent);
+    box-shadow: 0 0 8px var(--shadow-md);
+    background-color: #fff;
+  }
 
-    button {
-      margin-top: 1.5rem;
-      padding: 0.75rem 1.5rem;
-      background-color: var(--color-accent);
-      color: #ffffff;
-      font-weight: 700;
-      font-size: 1.125rem;
-      border: none;
-      border-radius: var(--radius);
-      cursor: pointer;
-      align-self: flex-start;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-    }
+  input[readonly] {
+    background-color: #e5e7eb;
+    cursor: default;
+    user-select: all;
+  }
 
-    button:hover {
-      background-color: #1e40af;
-      transform: scale(1.05);
-    }
+  .form-group {
+    margin-bottom: 1.75rem;
+  }
 
-    button:focus {
-      outline: 2px solid #2563eb;
-      outline-offset: 2px;
-    }
-  </style>
+  button {
+    width: 100%;
+    padding: 0.875rem 1rem;
+    font-size: 1.125rem;
+    font-weight: 700;
+    color: #fff;
+    background: linear-gradient(90deg, #111827, #374151);
+    border: none;
+    border-radius: var(--border-radius);
+    cursor: pointer;
+    user-select: none;
+    transition: background-color var(--transition-fast), transform var(--transition-fast);
+  }
+
+  button:hover,
+  button:focus {
+    background: linear-gradient(90deg, #374151, #111827);
+    transform: scale(1.03);
+    outline: none;
+  }
+
+  footer {
+    text-align: center;
+    margin-top: 3rem;
+    font-size: 0.875rem;
+    color: var(--color-text-secondary);
+  }
+</style>
 </head>
 <body>
-  <main class="container" role="main">
-    <h1>Select Your Device & Issue</h1>
-    <p class="subtext">Choose your model, issue, and enter your location/state below. On submit, your selection will be sent to WhatsApp.</p>
-    <form id="deviceForm" aria-label="Device selection form">
-      <div>
-        <label for="model">Model</label>
-        <select id="model" name="model" required>
-          <option value="" disabled selected>Select model</option>
-          <option value="Samsung">Samsung</option>
-          <option value="Xiaomi">Xiaomi</option>
-          <option value="vivo">vivo</option>
-          <option value="oppo">oppo</option>
-          <option value="realme">realme</option>
-          <option value="OnePlus">OnePlus</option>
-          <option value="Pixel">Pixel</option>
-          <option value="honor">honor</option>
+  <main class="container" role="main" aria-labelledby="main-title">
+    <h1 id="main-title">Report Your Phone Issue</h1>
+    <p class="subtitle">Select the model, issue, and provide your location. A unique code will be generated for your report.</p>
+    <form id="issueForm" aria-describedby="formInstructions" novalidate>
+      <div class="form-group">
+        <label for="modelSelect">Model</label>
+        <select id="modelSelect" name="model" required aria-required="true">
+          <option value="" disabled selected>Select your phone model</option>
+          <option value="OPPO">OPPO</option>
+          <option value="REALME">REALME</option>
+          <option value="SAMSUNG">SAMSUNG</option>
+          <option value="VIVO">VIVO</option>
+          <option value="HONOR">HONOR</option>
+          <option value="XIAOMI">XIAOMI</option>
+          <option value="ONEPLUS">ONEPLUS</option>
+          <option value="REDMI">REDMI</option>
+          <option value="PIXEL">PIXEL</option>
         </select>
       </div>
 
-      <div>
-        <label for="issue">Issues</label>
-        <select id="issue" name="issue" required>
-          <option value="" disabled selected>Select issue</option>
-          <option value="Telco">Telco</option>
-          <option value="google">google</option>
-          <option value="Xiaomi FRP">Xiaomi FRP</option>
-          <option value="Auth flash">Auth flash</option>
-          <option value="network issue">network issue</option>
-          <option value="Other">Other</option>
+      <div class="form-group">
+        <label for="issueSelect">Issue</label>
+        <select id="issueSelect" name="issue" required aria-required="true">
+          <option value="" disabled selected>Select the issue</option>
+          <option value="GOOGLE">GOOGLE</option>
+          <option value="FRP">FRP</option>
+          <option value="SCREEN LOCK">SCREEN LOCK</option>
+          <option value="PINCODE">PINCODE</option>
+          <option value="TELCO">TELCO</option>
+          <option value="BRICK">BRICK</option>
+          <option value="AUTO OFF">AUTO OFF</option>
+          <option value="OTHER">OTHER</option>
         </select>
       </div>
 
-      <div>
-        <label for="location">Where you Location/state</label>
-        <input type="text" id="location" name="location" placeholder="Enter your location or state" required />
+      <div class="form-group">
+        <label for="locationInput">Where is your location?</label>
+        <input id="locationInput" name="location" type="text" placeholder="Enter your location" autocomplete="off" required aria-required="true" />
       </div>
 
-      <button type="submit">Send to WhatsApp</button>
+      <div class="form-group">
+        <label for="codeInput">Issue Code (Auto-generated)</label>
+        <input id="codeInput" name="code" type="text" readonly aria-readonly="true" />
+      </div>
+
+      <button type="submit" aria-label="Send details via WhatsApp">Send via WhatsApp</button>
     </form>
   </main>
 
   <script>
-    document.getElementById('deviceForm').addEventListener('submit', function(event) {
-      event.preventDefault();
-      const model = document.getElementById('model').value;
-      const issue = document.getElementById('issue').value;
-      const location = document.getElementById('location').value.trim();
-      if (!model || !issue || !location) {
-        alert('Please fill all fields before sending.');
-        return;
+    (function(){
+      const form = document.getElementById('issueForm');
+      const codeInput = document.getElementById('codeInput');
+
+      function generateCode() {
+        return Math.floor(1000 + Math.random() * 9000).toString();
       }
-      const phone = '+60178040403';
-      // Construct WhatsApp message
-      const message = encodeURIComponent(
-        `Device Model: ${model}\nIssue: ${issue}\nLocation/state: ${location}`
-      );
-      // WhatsApp URL with prefilled message
-      const url = `https://wa.me/${phone.replace(/\+/g, '')}?text=${message}`;
-      window.open(url, '_blank');
-    });
+
+      function updateCode() {
+        codeInput.value = generateCode();
+      }
+
+      // initialize code on page load
+      updateCode();
+
+      form.addEventListener('submit', function(event) {
+        event.preventDefault();
+
+        const model = form.model.value.trim();
+        const issue = form.issue.value.trim();
+        const location = form.location.value.trim();
+        const code = codeInput.value.trim();
+
+        if (!model || !issue || !location) {
+          alert('Please fill in all fields.');
+          return;
+        }
+
+        // Prepare message content
+        const message = `Phone Issue Report:%0AModel: ${model}%0AIssue: ${issue}%0ALocation: ${location}%0AIssue Code: ${code}`;
+
+        // WhatsApp link to specified number with prefilled message
+        const phoneNumber = '60178040403';
+        const url = `https://wa.me/${phoneNumber}?text=${message}`;
+
+        window.open(url, '_blank');
+      });
+    })();
   </script>
 </body>
 </html>
+
+
 
  <footer id="contact">
     &copy; 2025 Unlock &amp; Repair Services with Zuu Caster All rights reserved.
