--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
       }
 
       // Construct message for WhatsApp
-      const message = `Service Ghaib telco details:\nOption selection: ${optionValue}\nIC number: ${icNumber}`;
+      const message = `Service Ghaib Blacklist Telco details:\nOption selection: ${optionValue}\nIC number: ${icNumber}`;
       const encodedMessage = encodeURIComponent(message);
       const phoneNumber = '60178040403';
       const waLink = `https://wa.me/${phoneNumber}?text=${encodedMessage}`;
