--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </header>
     <main>
         <div class="hero">
-            <h2> zuu caster it solution</h2>
+            <h2> zuu caster</h2>
             <ul class="service-list">
                 <li>SAMSUNG - SCREEN LOCK</li>
                 <li>GOOGLE LOCK</li>
