--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
   /* Responsive adjustments */
   @media (max-width: 600px) {
     .banner {
-      height: 3.5rem;
+      height: 2.5rem;
       padding: 0 1rem;
     }
     .banner-text {
@@ -410,7 +410,7 @@
 <div class="banner" role="banner" aria-label="Promotion Banner" tabindex="0">
   <div class="banner-text-wrapper" aria-live="polite" aria-atomic="true">
     <span class="banner-text" aria-label="Samsung FRP all device RM70 promotion">
-      Samsung frp all device rm70 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      Samsung frp all device Rm70 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </span>
   </div>
 </div>
