--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
         /* Floating WhatsApp button */
         #whatsapp-float {
-            position: fixed;
+            position: middle;
             bottom: 20px;
             right: 20px;
             background-color: #25D366;
