--- a/index.html
+++ b/index.html
@@ -296,116 +296,138 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Small Bottom Banner Promotion</title>
+<title>Promotional Banner</title>
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap');
+  /* Import modern font */
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
   :root {
-    --banner-bg: #ffffff;
-    --banner-radius: 0.5rem 0.5rem 0 0;
-    --banner-shadow: rgba(0, 0, 0, 0.05);
-    --banner-height: 3rem;
+    --banner-height: 72px;
+    --bg-color: #ffffff;
+    --text-shadow: rgba(0, 0, 0, 0.05);
+    --scroll-duration: 20s; /* Slower sliding speed */
   }
 
   body {
     margin: 0;
-    padding-bottom: var(--banner-height);
-    font-family: 'Outfit', sans-serif;
-    background-color: var(--banner-bg);
-    color: #6b7280;
-    min-height: 100vh;
-  }
-
-  .banner {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: var(--banner-height);
-    background-color: var(--banner-bg);
-    box-shadow: 0 -2px 8px var(--banner-shadow);
-    border-radius: var(--banner-radius);
+    background-color: var(--bg-color);
+    font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
     display: flex;
-    align-items: center;
-    overflow: hidden;
-    padding: 0 1rem;
-    z-index: 9999;
-    user-select: none;
+    justify-content: center;
+    padding: 2rem 1rem;
   }
 
-  .banner-text-wrapper {
-    overflow: hidden;
-    white-space: nowrap;
+  .banner-container {
+    max-width: 1200px;
     width: 100%;
   }
 
-  .banner-text {
+  .banner {
+    position: relative;
+    width: 100%;
+    height: var(--banner-height);
+    overflow: hidden;
+    background: var(--bg-color);
+    box-shadow: 0 4px 12px var(--text-shadow);
+    display: flex;
+    align-items: center;
+    border-radius: 0.75rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .scrolling-text {
     display: inline-block;
+    white-space: nowrap;
+    font-size: 2.5rem;
     font-weight: 700;
-    font-size: clamp(1.25rem, 3vw, 2rem); /* about 20px to 32px */
-    background: linear-gradient(90deg,
-      rgb(255, 0, 0),
-      rgb(0, 255, 0),
-      rgb(0, 0, 255),
-      rgb(255, 0, 0));
-    background-size: 300% 300%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation:
-      rgbShift 6s ease infinite,
-      slideRightToLeft 20s linear infinite;
-    padding-left: 100%;
-    will-change: transform;
+    animation: slide-left linear infinite;
+    animation-duration: var(--scroll-duration);
   }
 
-  @keyframes rgbShift {
+  @keyframes slide-left {
     0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-
-  @keyframes slideRightToLeft {
-    0% {
-      transform: translateX(0);
+      transform: translateX(100%);
     }
     100% {
       transform: translateX(-100%);
     }
   }
 
-  .banner:focus-within {
-    outline: 3px solid #4f46e5;
-    outline-offset: 4px;
+  /* RGB cycling for each letter with wave effect */
+  .scrolling-text span {
+    animation: rgb-cycle 6s linear infinite;
+    display: inline-block;
+    padding: 0 5px;
+    user-select: none;
   }
 
-  @media (max-width: 600px) {
-    .banner {
-      height: 2.5rem;
-      padding: 0 0.75rem;
+  /* Stagger animation delays to create wave */
+  .scrolling-text span:nth-child(3n+1) {
+    animation-delay: 0s;
+  }
+  .scrolling-text span:nth-child(3n+2) {
+    animation-delay: 0.15s;
+  }
+  .scrolling-text span:nth-child(3n+3) {
+    animation-delay: 0.3s;
+  }
+
+  @keyframes rgb-cycle {
+    0%   { color: rgb(255, 0, 0); }
+    20%  { color: rgb(255, 127, 0); }
+    40%  { color: rgb(255, 255, 0); }
+    60%  { color: rgb(0, 255, 0); }
+    80%  { color: rgb(0, 0, 255); }
+    100% { color: rgb(255, 0, 0); }
+  }
+
+  /* Bullet separator styling */
+  .bullet {
+    display: inline-block;
+    color: #999999;
+    user-select: none;
+    padding: 0 10px;
+    font-weight: 700;
+    font-size: 2.5rem;
+    line-height: 1;
+    animation: none;
+  }
+
+  /* Responsive adjustments */
+  @media (max-width: 768px) {
+    .scrolling-text {
+      font-size: 1.75rem;
     }
-    .banner-text {
-      font-size: 1.5rem;
-      padding-left: 100%;
+    .bullet {
+      font-size: 1.75rem;
+      padding: 0 8px;
+    }
+    .banner {
+      height: 54px;
+      padding-left: 1rem;
+      padding-right: 1rem;
     }
   }
 </style>
 </head>
 <body>
-
-<div class="banner" role="banner" aria-label="Promotion Banner" tabindex="0">
-  <div class="banner-text-wrapper" aria-live="polite" aria-atomic="true">
-    <span class="banner-text" aria-label="Samsung FRP all device RM70 promotion">
-      Samsung frp all device rm70&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    </span>
+  <div class="banner-container">
+    <section class="banner" role="region" aria-label="Promotional banner">
+      <div class="scrolling-text" aria-live="polite" aria-atomic="true">
+        <!-- Each letter wrapped in span for color cycling -->
+        <!-- Samsung FRP IMEI RM70 -->
+        <span>S</span><span>a</span><span>m</span><span>s</span><span>u</span><span>n</span><span>g</span><span> </span><span>F</span><span>R</span><span>P</span><span> </span><span>I</span><span>M</span><span>E</span><span>I</span><span> </span><span>R</span><span>M</span><span>7</span><span>0</span>
+        <span class="bullet">•</span>
+        <!-- Xiaomi FRP IMEI RM50 -->
+        <span>X</span><span>i</span><span>a</span><span>o</span><span>m</span><span>i</span><span> </span><span>F</span><span>R</span><span>P</span><span> </span><span>I</span><span>M</span><span>E</span><span>I</span><span> </span><span>R</span><span>M</span><span>5</span><span>0</span>
+        <span class="bullet">•</span>
+        <!-- Limited slot -->
+        <span>L</span><span>i</span><span>m</span><span>i</span><span>t</span><span>e</span><span>d</span><span> </span><span>s</span><span>l</span><span>o</span><span>t</span>
+      </div>
+    </section>
   </div>
-</div>
-
 </body>
 </html>
 
